k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: status-gateway
  namespace: prometheus
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
      - "status.dev.chainsmart.id"
      port:
        name: https
        protocol: HTTPS
        number: 443
      tls:
        mode: SIMPLE
        credentialName: status-dev-chainsmart-id
